add zoom image effect

--- a/src/components/AnimateImg/index.scss
+++ b/src/components/AnimateImg/index.scss
@@ -3,6 +3,37 @@
 // @import '../../sass/style.scss';
 
 .animate-img {
+  animation: img-zoom infinite 20s linear alternate;
   position: relative;
-  width: 100vw;
+  opacity: 0.8;
+  min-height: 90vh;
+  max-height: 90vh;
+  width: 100%;
+
+  transform-origin: 100% 0;
+  //   animation: immortalkenburns 20000ms linear 0s infinite alternate;
+}
+
+@keyframes img-zoom {
+  from {
+    transform: scale(1);
+  }
+  to {
+    transform: scale(1.15);
+  }
+}
+
+.App-logo {
+  animation: App-logo-spin infinite 20s linear;
+  height: 40vmin;
+  pointer-events: none;
+}
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
