--- a/src/components/AnimateAll/index.scss
+++ b/src/components/AnimateAll/index.scss
@@ -2,3 +2,38 @@
 @import '../../sass/mixins';
 @import '../../sass/button';
 // @import 'style.scss';
+
+.slider-container {
+  position: absolute;
+  left: 15%;
+  bottom: 15%;
+  width: 100%;
+}
+
+.slide-text {
+  text-align: left;
+  text-shadow: none;
+  margin: 0;
+  padding-bottom: 10px;
+  -webkit-animation-delay: 1s;
+  animation-delay: 1s;
+  font-size: 60px;
+  line-height: 94px;
+  font-weight: 600;
+  color: #fff;
+  letter-spacing: 0px;
+}
+
+.divider {
+  width: 90px;
+  height: 3px;
+  background-color: $color-main;
+  -webkit-animation-delay: 1.5s;
+  animation-delay: 1.5s;
+}
+
+.learn-more {
+  a {
+    font-weight: 700;
+  }
+}
