--- a/src/components/AnimateAll/index.scss
+++ b/src/components/AnimateAll/index.scss
@@ -3,25 +3,54 @@
 @import '../../sass/button';
 // @import 'style.scss';
 
+.animate-all {
+  min-height: 90vh;
+  max-height: 90vh;
+  height: auto;
+  width: 100vw;
+}
+
+.img {
+  position: relative;
+  //   height: 600px;
+}
 .slider-container {
   position: absolute;
+  top: 20%;
   left: 15%;
-  bottom: 15%;
   width: 100%;
+  //   padding-bottom: 3rem;
+
+  @include tablet {
+    top: 35%;
+  }
+  @include desktop {
+    top: 60%;
+  }
 }
 
 .slide-text {
+  color: #fff;
+  font-size: 25px;
+  font-weight: 600;
+  line-height: 60px;
   text-align: left;
-  text-shadow: none;
+  text-shadow: 1px 1px 5px #3535;
   margin: 0;
   padding-bottom: 10px;
+
   -webkit-animation-delay: 1s;
   animation-delay: 1s;
-  font-size: 60px;
-  line-height: 94px;
-  font-weight: 600;
-  color: #fff;
-  letter-spacing: 0px;
+
+  @include tablet {
+    font-size: 30px;
+    line-height: 94px;
+    letter-spacing: 1px;
+  }
+
+  @include desktop {
+    font-size: 60px;
+  }
 }
 
 .divider {
