--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -3,11 +3,11 @@
   border: $border;
   cursor: pointer;
   font-family: inherit;
-  font-size: 1rem;
+  font-size: 0.9rem;
   font-weight: 700;
   letter-spacing: 1px;
   margin: 15px 0;
-  padding: 12px 55px;
+  padding: 10px 30px;
   text-transform: capitalize;
 
   transition-duration: 0.7s;
@@ -16,5 +16,10 @@
   a {
     color: #fff;
     text-decoration: none;
+  }
+
+  @include tablet {
+    font-size: 1.1rem;
+    padding: 12px 55px;
   }
 }
