--- a/src/components/AnimateAll/index.scss
+++ b/src/components/AnimateAll/index.scss
@@ -7,7 +7,7 @@
   min-height: 90vh;
   max-height: 90vh;
   height: auto;
-  width: 100vw;
+  //   width: 100vw;
 }
 
 .img {
@@ -16,31 +16,25 @@
 }
 .slider-container {
   position: absolute;
-  top: 20%;
+  top: 60%;
   left: 15%;
   width: 100%;
-  //   padding-bottom: 3rem;
-
-  @include tablet {
-    top: 35%;
-  }
-  @include desktop {
-    top: 60%;
-  }
 }
 
 .slide-text {
+  animation-name: slideIn;
+  animation-duration: 1s;
+  animation-timing-function: ease-out;
+
   color: #fff;
   font-size: 25px;
   font-weight: 600;
   line-height: 60px;
   text-align: left;
-  text-shadow: 1px 1px 5px #3535;
+  text-shadow: 2px 1px 5px #353535;
   margin: 0;
   padding-bottom: 10px;
-
-  -webkit-animation-delay: 1s;
-  animation-delay: 1s;
+  width: 100%;
 
   @include tablet {
     font-size: 30px;
@@ -50,19 +44,62 @@
 
   @include desktop {
     font-size: 60px;
+    line-height: 100px;
   }
 }
 
 .divider {
-  width: 90px;
+  animation-name: divSlide;
+  animation-delay: 1.5s;
+  animation-duration: 1s;
+  //   animation-direction: reverse;
+  animation-fill-mode: both;
+
+  width: 100px;
   height: 3px;
   background-color: $color-main;
-  -webkit-animation-delay: 1.5s;
-  animation-delay: 1.5s;
+}
+.lightSpeedIn {
+  animation-name: lightSpeedIn;
+  animation-timing-function: ease-out;
 }
 
 .learn-more {
   a {
     font-weight: 700;
+  }
+}
+
+@keyframes slideIn {
+  0% {
+    margin-left: 100%;
+  }
+
+  100% {
+    margin-left: 0%;
+  }
+}
+
+@keyframes divSlide {
+  0% {
+    margin-left: 0%;
+  }
+
+  100% {
+    margin-left: 100%;
+  }
+}
+
+@keyframes lightSpeedIn {
+  0% {
+    opacity: 0;
+    transform: translate3d(100%, 0, 0);
+  }
+  50% {
+    opacity: 1;
+  }
+
+  100% {
+    // transform: translateZ(0);
   }
 }
