--- a/src/components/AnimateImg/index.scss
+++ b/src/components/AnimateImg/index.scss
@@ -7,7 +7,7 @@
 }
 
 .animate-img {
-  animation: img-zoom infinite 20s linear alternate;
+  animation: img-zoom 20s linear 0s infinite alternate;
   transform-origin: 100% 0;
 
   position: relative;
@@ -27,23 +27,10 @@
 @keyframes img-zoom {
   from {
     transform: scale(1);
+    transition: transform 20s linear 0s;
   }
   to {
-    transform: scale(1.15);
-  }
-}
-
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+    transform: scale(1.2);
+    transition: transform 20s linear 0s;
   }
 }
