add button slide in fill animation

--- a/src/sass/_button.scss
+++ b/src/sass/_button.scss
@@ -1,20 +1,13 @@
-// .btn-wrapper {
-//   transition-property: width;
-//   transition-duration: 2s;
-//   transition-timing-function: ease;
-
-//   &:hover {
-//     width: 250px;
-//   }
-// }
-
 .animate-btn {
-  animation: slide 20s linear alternate;
-  background: #000;
+  background: linear-gradient(45deg, $light 50%, $dark 50%);
   border: $border;
+  border-radius: 0;
   cursor: pointer;
+
+  //   animation: slide 20s linear alternate;
+  //   background: $dark;
+
   font-family: inherit;
-  font-size: 0.9rem;
   font-weight: 700;
   letter-spacing: 1px;
   margin: 15px 0;
@@ -22,47 +15,19 @@
   text-transform: capitalize;
   width: fit-content;
   animation-fill-mode: both;
-
+  transition: 0.7s ease;
   a {
-    color: #fff;
+    color: $light;
+    font-size: 0.9rem;
     text-decoration: none;
+
+    @include tablet {
+      font-size: 1rem;
+    }
   }
 
   @include tablet {
-    font-size: 1.1rem;
     padding: 12px 55px;
-  }
-
-  &:hover {
-    // animation: btn-fill 1s linear 0s;
-    // animation-fill-mode: forwards;
-
-    a {
-      color: #000;
-    }
-  }
-}
-
-.btn-slider {
-  transition: 0.7s ease;
-
-  &:after {
-    content: '';
-    position: absolute;
-    z-index: -1;
-  }
-}
-
-.btn-filler {
-  &:after {
-    background: #fff;
-    color: #000;
-
-    top: 0;
-    left: 0;
-    transition: 0.7s ease-in;
-    height: 100%;
-    width: 0%;
   }
 
   &:hover {
@@ -70,7 +35,7 @@
     animation-fill-mode: forwards;
 
     a {
-      color: #000;
+      color: $dark;
     }
   }
 }
@@ -82,4 +47,67 @@
   100% {
     background: yellow;
   }
+}
+
+//
+button {
+  background: transparent;
+  border: $border;
+  border-radius: 0;
+  color: $light; /*For IE*/
+  cursor: pointer;
+
+  //   font-weight: 700;
+  letter-spacing: 1px;
+  margin: 15px 0;
+  padding: 0;
+  position: relative;
+
+  a {
+    color: $light;
+    font-size: 0.8rem;
+    font-weight: 700;
+    // text-decoration: none;
+
+    @include tablet {
+      font-size: 0.9rem;
+    }
+  }
+}
+button > a {
+  display: inline-block;
+  padding: 10px 30px;
+  background: linear-gradient(45deg, $dark 50%, $light 50%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  transition: 0.7s ease;
+  @include tablet {
+    padding: 11px 55px;
+  }
+}
+button:after {
+  content: '';
+
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background: linear-gradient(90deg, $light 50%, $dark 50%);
+  z-index: -1;
+}
+
+button > a,
+button:after {
+  background-size: 300%;
+  background-position: 100%;
+  transition: 2s;
+}
+
+button:hover > a,
+button:hover:after {
+  background-position: 0;
+
+  color: $dark;
+  /*For IE*/
 }
